--- a/style.css
+++ b/style.css
@@ -35,6 +35,23 @@ h5 {
 }
 
 
+.preloader.hidepreloader {
+    display: none;
+}
+
+.preloader {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background-image: url(img/Spinner-1.4s-241px.gif);
+    background-repeat: no-repeat;
+    background-color: ;
+    background-position: center;
+}
+
 
 /*****************/
 
@@ -257,8 +274,9 @@ body {
     cursor: pointer;
     opacity: 2;
     background-color: rgba(217, 217, 217, 0.38);
-/*    box-shadow: 0px 10px 20px 3px white;
-    */}
+    /*    box-shadow: 0px 10px 20px 3px white;
+    */
+}
 
 .nyhed2 {
     padding-bottom: 60px;
@@ -268,7 +286,7 @@ body {
     cursor: pointer;
     opacity: 2;
     background-color: rgba(217, 217, 217, 0.38);
-/*    box-shadow: 0px 10px 20px 3px white;*/
+    /*    box-shadow: 0px 10px 20px 3px white;*/
 }
 
 .nyhed3 {
