--- a/style.css
+++ b/style.css
@@ -48,13 +48,12 @@ h5 {
     z-index: 9999;
     background-image: url(img/Spinner-1.4s-241px.gif);
     background-repeat: no-repeat;
-    background-color: ;
+    background-color: #d6c7c7;
     background-position: center;
 }
 
 
 /*****************/
-
 
 
 body {
