--- a/style.css
+++ b/style.css
@@ -35,10 +35,6 @@ h5 {
 }
 
 
-.preloader.hidepreloader {
-    display: none;
-}
-
 .preloader {
     position: absolute;
     top: 0;
@@ -46,9 +42,8 @@ h5 {
     width: 100%;
     height: 100%;
     z-index: 9999;
-    background-image: url(img/Spinner-1.4s-241px.gif);
+    background-image: url(img/Spinner-1.3s-200px.gif);
     background-repeat: no-repeat;
-    background-color: #d6c7c7;
     background-position: center;
 }
 
@@ -619,10 +614,18 @@ body {
         padding: 200px 0px 150px 0px;
     }
 
-    #kontakt h4 {}
+    #kontakt h4 {
+        border-bottom: solid 1px grey;
+    }
 
     #kontakt p {
-        margin-left: 60px;
+        text-align: center;
+        padding: 0;
+        margin-left: 0;
+    }
+
+    .kontakt_tekst_bund {
+        margin: 0;
     }
 }
 }
