--- a/style.css
+++ b/style.css
@@ -212,6 +212,7 @@ body {
 
 #forside h5 {
     padding-bottom: 90px;
+    width: 100%;
 }
 
 #forside img {
@@ -345,7 +346,7 @@ body {
 
 /**/
 
-@media (min-width: 420px) {
+@media (min-width: 416px) {
     #ingredienser h4 {
         width: 100%;
         height: 330px;
@@ -604,6 +605,10 @@ body {
 
     #om {
         padding: 200px 200px 100px 200px;
+    }
+
+    #om h2 {
+        padding-bottom: 20px;
     }
 
     #produkter {
