--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ body {
     position: relative;
     top: 30px;
     left: 30px;
+    width: 300px;
 
     z-index: 1;
 
@@ -225,6 +226,11 @@ body {
 
 #om {
     padding: 0px 40px 40px 40px;
+}
+
+
+#infografik img {
+    width: 100%;
 }
 
 #produkter {
@@ -663,7 +669,7 @@ body {
 
     #kontakt {
         justify-content: center;
-        padding: 200px 0px 150px 0px;
+        padding: 50px 0px 150px 0px;
     }
 
     #kontakt h4 {
@@ -679,5 +685,10 @@ body {
     .kontakt_tekst_bund {
         margin: 0;
     }
-}
+
+    iframe {
+        padding-right: 200px;
+        padding-left: 200px;
+        margin-bottom: 50px;
+    }
 }
